# COME

./: CMakeLists.txt  README.md  main.cpp
UnitTests/: CMakeLists.txt  KrylovSolversTest.cpp  LinAlg_sparse_test.cpp  catch.hpp
UnitTests/FEM/: CMakeLists.txt  ShapeFunctions_QP_test.cpp
UnitTests/Grid/: CMakeLists.txt  GridAbaqusReadInTest.cpp
UnitTests/LinearAlgebra/: CMakeLists.txt  LinAlg_dense_test.cpp  LinAlg_sparse_test.cpp  LinAlg_vector_test.cpp
UnitTests/LinearSolvers/: CMakeLists.txt  KrylovSolversTest.cpp  LinearIterativeSolversTest.cpp
source/: CMakeLists.txt
source/CoordinateSystems/: CMakeLists.txt  COME_Coordinate_System.cpp
source/DOFs/: CMakeLists.txt  COME_DofHandler.cpp  COME_DofHandler.hpp  COME_DofUtils.cpp  COME_DofUtils.hpp
source/DomainDecomposition/: CMakeLists.txt
source/FEM/: CMakeLists.txt
source/Grid/: CMakeLists.txt  COME_AbsTopologicalComponent.cpp  COME_AbsTopologicalComponent.hpp  COME_Edge.cpp  COME_Edge.hpp  COME_Element.cpp  COME_Element.hpp  COME_Face.cpp  COME_Face.hpp  COME_GridIn.cpp  COME_GridIn.hpp  COME_Mesh.cpp  COME_Mesh.hpp  COME_Node.cpp  COME_Node.hpp  COME_Volume.cpp  COME_Volume.hpp
source/InputParsing/: CMakeLists.txt
source/LinearAlgebra/: CMakeLists.txt  COME_Linalg_dense.hpp  COME_Linalg_sparse.hpp  COME_Linalg_vector.hpp  COME_vector_norm.hpp
source/LinearSolvers/: CMakeLists.txt  COME_KrylovSolvers.cpp  COME_KrylovSolvers.hpp  COME_LinearIterativeSolvers.cpp  COME_LinearIterativeSolvers.hpp
source/Particles/: CMakeLists.txt  COME_ParticleUtils.cpp  COME_ParticleUtils.hpp  COME_Particles.hpp
(+36 files in other folders)
