add_subdirectory(CoordinateSystems)
add_subdirectory(DOFs)
add_subdirectory(DomainDecomposition)
add_subdirectory(FEM)
add_subdirectory(Grid)
add_subdirectory(InputParsing)
add_subdirectory(LinearAlgebra)
add_subdirectory(LinearSolvers)
add_subdirectory(MLMC)
add_subdirectory(Multigrid)
add_subdirectory(Particles)
add_subdirectory(Postprocessing)
add_subdirectory(ProblemSolvers)


